--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "editor.formatOnSave": true,
+  "editor.defaultFormatter": "xaver.clang-format",
   "clangd.arguments": [
     "--compile-commands-dir=build"
   ],
